package com.bo.createdPatterns.abstractFactory;

public interface HuMan {
    //人的相应的肤色
    void getColor();
    //说的语言
    void talk();
    //性别
    void getSex();
}
